infra/manifests/atlantis/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlantis-ingress
  namespace: atlantis
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: spino-atlantis-static-ip-prod
    networking.gke.io/managed-certificates: atlantis-cert
    spec.ingressClassName: "gce"
spec:
  rules:
  - host: "atlantis.spino.kurichi.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: atlantis
            port:
              number: 80
